<resources>
    <string name="app_name">CookBook</string>
    <string name="cookbook">CookBook</string>
<!--    <string name="api_key">a41c27d9934145e3a459493710afbb8d</string>-->
<!--    <string name="api_key">fc280aba16db4aac9fd7c738629651cc</string>-->
<!--    <string name="api_key">d159a00689f5406daec692134f92271c</string>-->
<!--    <string name="api_key">6f69699a8f7346e2891ddc971ed43cd8</string>-->
    <string name="api_key">e6aba75e66d64637b15547fb0b03d1f3</string>

    <string-array name="tags">
        <item>Main course</item>
        <item>Side dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Marinade</item>
        <item>Fingerfood</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register2">Register Account</string>
    <string name="signin">Sign In</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="user_settings_title"><b>User Settings</b></string>
    <string name="app_information"><b>App Information</b></string>
</resources>