<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="@string/cookbook"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:ellipsize="end"
        android:hint="@string/email_address"
        android:maxLength="25"
        android:maxLines="1"
        android:minHeight="38dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,MissingConstraints,RtlHardcoded,TextFields" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:maxLength="25"
        android:ellipsize="end"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,MissingConstraints,RtlHardcoded,TextFields,UsingOnClickInXml" />


    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button_rounded_corners_click"
        android:fontFamily="@font/poppinsblack"
        android:padding="14dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/back"
        android:layout_width="170dp"
        android:layout_height="76dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners_click"
        android:fontFamily="@font/poppinsblack"
        android:padding="14dp"
        android:text="@string/back"
        android:onClick="back"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,MissingConstraints,UsingOnClickInXml,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="164dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Dont have an account?"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/back"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppinsblack"
        android:minHeight="48dp"
        android:onClick="register"
        android:text="Create one"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/register"
        tools:ignore="HardcodedText,UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>